:sparkles: Adapt backend to displayed info in frontend